// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderNavigationItem should render an ActiveNavigationItem 1`] = `
<_default
  flow="up"
>
  <HeaderNavigationItem__StyledLink
    $active={true}
    to="/augsburg/de"
  >
    <HeaderNavigationItem__Circle>
      <img
        alt=""
        src="icon"
      />
    </HeaderNavigationItem__Circle>
    <div>
      Kategorien
    </div>
  </HeaderNavigationItem__StyledLink>
</_default>
`;

exports[`HeaderNavigationItem should render an InactiveNavigationItem 1`] = `
<_default
  flow="up"
  text="random tooltip"
>
  <HeaderNavigationItem__StyledLink
    $active={false}
    to="/augsburg/de"
  >
    <HeaderNavigationItem__Circle>
      <img
        alt=""
        src="icon"
      />
    </HeaderNavigationItem__Circle>
    <div>
      Kategorien
    </div>
  </HeaderNavigationItem__StyledLink>
</_default>
`;
